--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
       {
         "iconPath": "/imgs/TabbarIcon/icon_new_recruit.png",
         "selectedIconPath": "/imgs/TabbarIcon/icon_new_recruit_fil.png",
-        "text": "招新",
+        "text": "招新aa2123312",
         "pagePath": "pages/recruit/recruit"
       },
       {
