--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#43adef",
-    "navigationBarTitleText": "萌新方便面",
+    "navigationBarTitleText": "萌新方便面111111111",
     "navigationBarTextStyle": "white"
   },
   "tabBar": {
