--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/message/detail",
     "pages/cap/me/index",
     "pages/rookie/index/index",
     "pages/rookie/me/index",
