--- a/app.json
+++ b/app.json
@@ -38,20 +38,20 @@
     "borderStyle": "black",
     "list": [
       {
-        "iconPath": "/imgs/TabbarIcon/me.png",
-        "selectedIconPath": "/imgs/TabbarIcon/my_fill.png",
-        "text": "招新",
+        "iconPath": "/imgs/TabbarIcon/home.png",
+        "selectedIconPath": "/imgs/TabbarIcon/home_select.png",
+        "text": "宣传",
         "pagePath": "pages/rookie/index/index"
       },
       {
-        "iconPath": "/imgs/TabbarIcon/my.png",
-        "selectedIconPath": "/imgs/TabbarIcon/my_fill.png",
-        "text": "我的",
+        "iconPath": "/imgs/TabbarIcon/recruit.png",
+        "selectedIconPath": "/imgs/TabbarIcon/recruit_select.png",
+        "text": "招新",
         "pagePath": "pages/rookie/recruit/index"
       },
       {
         "iconPath": "/imgs/TabbarIcon/me.png",
-        "selectedIconPath": "/imgs/TabbarIcon/my_fill.png",
+        "selectedIconPath": "/imgs/TabbarIcon/me_select.png",
         "text": "我的",
         "pagePath": "pages/rookie/me/index"
       }
